[gd_scene load_steps=4 format=3 uid="uid://xm0j717pa5t8"]

[ext_resource type="Script" uid="uid://f3qr1d0fgou8" path="res://addons/SoundLibraryBrowser/src/sound_library_preview_item.gd" id="1_cuok1"]

[sub_resource type="Gradient" id="Gradient_di82o"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p36na"]
gradient = SubResource("Gradient_di82o")
width = 5
height = 20

[node name="SoundLibraryPreviewItem" type="VBoxContainer"]
script = ExtResource("1_cuok1")

[node name="SoundName" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
bbcode_enabled = true
text = "Song [b]Name[/b]"
fit_content = true
scroll_active = false

[node name="PlaybackContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Spacing" type="Panel" parent="PlaybackContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="PlayButton" type="Button" parent="PlaybackContainer"]
layout_mode = 2
text = ">"

[node name="SoundProgressPanel" type="Panel" parent="PlaybackContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="SoundProgress" type="HSlider" parent="PlaybackContainer/SoundProgressPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = SubResource("GradientTexture2D_p36na")

[node name="SoundTime" type="Label" parent="PlaybackContainer"]
layout_mode = 2
text = "0 / 0"

[node name="UseInProject" type="CheckBox" parent="PlaybackContainer"]
layout_mode = 2
text = "Use in project?"

[node name="CopyResPath" type="Button" parent="PlaybackContainer"]
layout_mode = 2
disabled = true
text = "Copy res://"

[node name="CopyUuid" type="Button" parent="PlaybackContainer"]
layout_mode = 2
disabled = true
text = "Copy uuid://"

[node name="MessageContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="MessageLabel" type="Label" parent="MessageContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Loading..."
